# sams

./: .gitignore  2025_자산관리 프로세스(전산).pptx  ASSET_EVENT_LOGGING_FLOW.md  ASSET_EVENT_LOGGING_IMPLEMENTATION.md  ASSET_TABLE_IMPROVEMENTS_SUMMARY.md  BACKEND_TASKS.md  DASHBOARD_PHASE1_README.md  DASHBOARD_PHASE3_SUMMARY.md  FRONTEND_REFACTOR_SUMMARY.md  FRONTEND_TASKS.md  PHASE_13_COMPLETION_REPORT.md  README.md  RENTAL_RETURN_FEATURE.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  자산관리 데이터(슈커톤).xlsx  자산관리 데이터(슈커톤)_total_processed.xlsx
apps/backend/: .env.example  .gitignore  README.md  UX_DESIGN_SPECIFICATION.md  UX_IMPROVEMENTS_SUMMARY.md  alembic.ini  check_assets.py  check_indexes.py  package.json  pyproject.toml  test_api.py  test_receipt_ocr.sh  test_rental_return.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20251030_1809-001_initial_migration_with_all_models.py  20251030_2224-97b54c3e6d34_add_indexes_for_asset_performance.py  20251030_2329-a95dd87146e9_update_asset_status_enum_with_actual_.py  20251030_2345-ac73feb093d2_add_all_excel_columns_to_asset_model.py  20251031_0025-b93df68d127d_add_department_relationship_to_users.py  (+7 more)
apps/backend/docs/: AUTHENTICATION.md  DATABASE_MIGRATIONS.md  EMAIL_API.md  EMAIL_API_QUICKSTART.md  PHASE6_COMPLETION.md  PHASE_10_SUMMARY.md  RECEIPT_ANALYSIS_MODES.md  RECEIPT_SYSTEM.md  api-examples.http
apps/backend/scripts/: create_test_user.py  create_users_from_excel.py  export_openapi.py  migrate_excel.py  seed.py  update_asset_assignments.py
apps/backend/src/: config.py  database.py  main.py
apps/backend/tests/: test_auth.py
docs/: CHECKLIST.md  (+17 more)
(+169 files in other folders)
